# GiRaF

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/eval/: CMakeLists.txt  eval.cpp
